# biji-ui

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  fly.toml  main.scss  package.json  pnpm-lock.yaml  tailwind.config.js
.helix/: languages.toml
.zed/: format.sh  settings.json
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
app/src/components/: code.rs
app/src/icons/: align_justify.rs  biji_ui.rs  book_text.rs  bug.rs  caret.rs  check.rs  chevron_right.rs  ellipsis.rs  github.rs  grid_pattern.rs  hero_pattern.rs  mod.rs  moon.rs  sun.rs  sun_moon.rs  x.rs
app/src/pages/docs/: accordion.rs  dialog.rs  dropdown_menu.rs  getting_started.rs  menubar.rs  mod.rs  tooltip.rs
biji-ui/: Cargo.toml
biji-ui-docs/: Cargo.toml  index.html  input.scss
biji-ui-docs/src/: app.rs  lib.rs  main.rs
biji-ui-docs/src/components/: api_table.rs  button.rs  code.rs  mod.rs
biji-ui-docs/src/icons/: biji_ui.rs  caret.rs  check.rs  chevron_right.rs  ellipsis.rs  mod.rs  search.rs  sun.rs  sun_moon.rs
biji-ui-docs/src/pages/docs/: accordion.rs  alert_dialog.rs  calendar.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  getting_started.rs  hover_card.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  pin_input.rs  popover.rs  progress.rs  radio_group.rs  select.rs  separator.rs  slider.rs  switch.rs  tabs.rs  toast.rs  toggle_group.rs  tooltip.rs
biji-ui/src/: custom_animated_show.rs  items.rs  lib.rs
biji-ui/src/components/: mod.rs
biji-ui/src/components/accordion/: context.rs  item.rs  mod.rs  root.rs
biji-ui/src/components/alert_dialog/: context.rs  mod.rs  root.rs
biji-ui/src/components/calendar/: context.rs  grid.rs  header.rs  mod.rs  root.rs  types.rs
biji-ui/src/components/checkbox/: context.rs  mod.rs  root.rs
biji-ui/src/components/collapsible/: context.rs  mod.rs  root.rs
biji-ui/src/components/combobox/: context.rs  mod.rs  root.rs
biji-ui/src/components/command/: context.rs  mod.rs  root.rs
biji-ui/src/components/context_menu/: context.rs  mod.rs  root.rs
biji-ui/src/components/dialog/: context.rs  dialog.rs  mod.rs  root.rs
biji-ui/src/components/drawer/: context.rs  mod.rs  root.rs
biji-ui/src/components/hover_card/: context.rs  mod.rs  root.rs
biji-ui/src/components/menu/: mod.rs
biji-ui/src/components/menubar/: context.rs  item.rs  menu.rs  mod.rs  root.rs
biji-ui/src/components/navigation_menu/: context.rs  mod.rs  root.rs
biji-ui/src/components/pagination/: mod.rs  root.rs
biji-ui/src/components/pin_input/: context.rs  mod.rs  root.rs
biji-ui/src/components/popover/: context.rs  mod.rs  root.rs
biji-ui/src/components/progress/: mod.rs  root.rs
biji-ui/src/components/radio_group/: context.rs  mod.rs  root.rs
biji-ui/src/components/select/: context.rs  mod.rs  root.rs
biji-ui/src/components/separator/: mod.rs  root.rs
biji-ui/src/components/slider/: context.rs  mod.rs  root.rs
biji-ui/src/components/switch/: context.rs  mod.rs  root.rs
biji-ui/src/components/tabs/: context.rs  mod.rs  root.rs
biji-ui/src/components/toast/: context.rs  mod.rs  root.rs
biji-ui/src/components/toggle_group/: context.rs  mod.rs  root.rs
biji-ui/src/components/tooltip/: context.rs  mod.rs  singleton.rs  tooltip.rs
biji-ui/src/utils/: mod.rs  positioning.rs  prevent_scroll.rs  props.rs
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
jspackages/: Cargo.toml  build.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js
jspackages/output/: highlight.css  highlight.js  shiki.js
jspackages/scripts/: shiki.js
jspackages/src/: highlight.rs  shiki.rs
server/: Cargo.toml
server/src/: main.rs
style/: main.css  main.scss
ui/: Cargo.toml
ui/src/: custom_animated_show.rs  items.rs  lib.rs
ui/src/components/: mod.rs
ui/src/components/accordion/: content.rs  context.rs  contexts.rs  events.rs  item.rs  mod.rs  root.rs  trigger.rs
ui/src/components/dialog/: context.rs  dialog.rs  root.rs
ui/src/components/menu/: content.rs  contexts.rs  events.rs  item.rs  mod.rs  root.rs  sub.rs  trigger.rs
ui/src/components/menubar/: content.rs  context.rs  contexts.rs  events.rs  item.rs  menu.rs  mod.rs  root.rs  trigger.rs
ui/src/components/tooltip/: context.rs  mod.rs  tooltip.rs
ui/src/utils/: mod.rs  positioning.rs
ui/src/utils/polygon/: mod.rs
