[package]
name = "biji-ui"
version = { workspace = true }
edition = { workspace = true }
description = "Effortless headless UI components for your Leptos projects"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/biji-ui/biji-ui"

[features]
default = []
full = ["accordion", "calendar", "dialog", "menu", "menubar", "tooltip"]

accordion = []
calendar  = ["dep:chrono"]
dialog    = []
menu      = ["menubar"]
menubar   = []
tooltip   = []

[dependencies]
leptos = { version = "0.8" }
leptos-use = { version = "0.16" }
wasm-bindgen = "0.2.114"
chrono = { version = "0.4", features = ["wasmbind"], optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "CssStyleDeclaration",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCollection",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "NodeList",
    "PointerEvent",
    "Window",
]
