[package]
name = "biji-ui"
version = { workspace = true }
edition = { workspace = true }
description = "Effortless headless UI components for your Leptos projects"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/biji-ui/biji-ui"

[features]
default = []
full = ["accordion", "alert_dialog", "calendar", "checkbox", "collapsible", "combobox", "command", "context_menu", "dialog", "drawer", "hover_card", "menu", "menubar", "navigation_menu", "pin_input", "popover", "progress", "radio_group", "select", "separator", "slider", "switch", "tabs", "toast", "toggle_group", "tooltip"]

accordion    = []
alert_dialog = []
calendar     = ["dep:chrono"]
checkbox     = []
collapsible  = []
command      = []
combobox     = []
context_menu = []
dialog       = []
drawer       = []
hover_card   = []
menu             = ["menubar"]
menubar          = []
navigation_menu  = []
pin_input        = []
popover      = []
progress     = []
radio_group  = []
select       = []
separator    = []
slider       = []
switch       = []
tabs         = []
toast        = []
toggle_group = []
tooltip      = []

[dependencies]
leptos = { version = "0.8" }
leptos-use = { version = "0.16" }
wasm-bindgen = "0.2.114"
chrono = { version = "0.4", features = ["wasmbind"], optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "ClipboardEvent",
    "CssStyleDeclaration",
    "DataTransfer",
    "DomRect",
    "Element",
    "Event",
    "EventTarget",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCollection",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSpanElement",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "NodeList",
    "Performance",
    "PointerEvent",
    "Window",
]
