
[package]
name = "biji-ui"
version = "0.1.1"
edition = "2021"
description = "Effortless headless UI components for your Leptos projects"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/biji-ui/biji-ui"

[dependencies]
leptos = { version = "0.6", features = ["nightly"] }
leptos-use = { version = "0.10" }
wasm-bindgen = "=0.2.92"
web-sys = "0.3.69"
