
[package]
name = "biji-ui"
version = { workspace = true }
edition = "2021"
description = "Effortless headless UI components for your Leptos projects"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/biji-ui/biji-ui"

[dependencies]
leptos = { version = "0.7" }
leptos-use = { version = "0.15.3" }
wasm-bindgen.workspace = true
web-sys = "0.3.69"
